# MCP-Gateway

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-ci.yml  backend-release.yml  frontend-ci.yml
mcp-gateway/: Cargo.toml  README.md  config.example.json
mcp-gateway-ui/: README.md  vite.config.ts
mcp-gateway-ui/src/: App.tsx  api.ts  i18n.ts  localConfig.ts  types.ts
mcp-gateway-ui/src-tauri/: Cargo.toml  tauri.conf.json
mcp-gateway-ui/src-tauri/src/: lib.rs
mcp-gateway-ui/src/components/: UpdateBanner.tsx
mcp-gateway-ui/src/hooks/: usePolling.ts  useUpdateCheck.ts
mcp-gateway-ui/src/styles/: components.css  layout.css  tokens.css
mcp-gateway/crates/gateway-cli/: Cargo.toml
mcp-gateway/crates/gateway-cli/src/: cli.rs  main.rs
mcp-gateway/crates/gateway-core/: Cargo.toml
mcp-gateway/crates/gateway-core/src/: error.rs  lib.rs  terminal.rs
mcp-gateway/crates/gateway-core/src/config/: legacy.rs  mod.rs  model.rs  service.rs  validate.rs
mcp-gateway/crates/gateway-core/src/runtime/: connection.rs  io_codec.rs  manager.rs  mod.rs  pool.rs  protocol_negotiation.rs
mcp-gateway/crates/gateway-http/: Cargo.toml
mcp-gateway/crates/gateway-http/src/: auth.rs  lib.rs  openapi.rs  response.rs  skills.rs  state.rs
mcp-gateway/crates/gateway-http/src/routes/: admin.rs  gateway.rs  mod.rs
mcp-gateway/crates/gateway-integration-tests/: Cargo.toml
mcp-gateway/crates/gateway-integration-tests/tests/: migrate_smoke.rs
